// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignRegistrant closes an issue with an issue number 1`] = `
Array [
  Array [
    Object {
      "assignees": Array [
        "JasonEtco",
      ],
      "headers": Object {
        "accept": "application/vnd.github.symmetra-preview+json",
      },
      "method": "POST",
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "url": "/repos/:owner/:repo/issues/:number/assignees",
    },
  ],
]
`;

exports[`assignRegistrant closes an issue with an issue string 1`] = `
Array [
  Array [
    Object {
      "assignees": Array [
        "JasonEtco",
      ],
      "headers": Object {
        "accept": "application/vnd.github.symmetra-preview+json",
      },
      "method": "POST",
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "url": "/repos/:owner/:repo/issues/:number/assignees",
    },
  ],
]
`;

exports[`assignRegistrant closes the issue from the webhook payload 1`] = `
Array [
  Array [
    Object {
      "assignees": Array [
        "JasonEtco",
      ],
      "headers": Object {
        "accept": "application/vnd.github.symmetra-preview+json",
      },
      "method": "POST",
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
      "url": "/repos/:owner/:repo/issues/:number/assignees",
    },
  ],
]
`;
